# hiring-agents

./: .env.example  .gitignore  Makefile  README.md  plan.md  pyproject.toml
.chainlit/: config.toml
.streamlit/: config.toml
data/: candidates.json  ground_truth.json  labels.json  queries.json
docs/: plan_v1.md  plan_v2.md  plan_v3.md  vision.md
public/: custom.css  theme.json
scripts/: check_traces.py  generate_data.py  run_eval.py  run_ingest.py
src/hiring_agents/: cli.py  config.py  graph.py  graph_state.py  ingest.py  io_utils.py  logging_setup.py  normalize.py  pipeline.py  rerank.py  retrieve.py  schemas.py
src/hiring_agents/agent/: agent.py  prompts.py  tools.py
src/hiring_agents/api/: app.py  models.py  routes.py
src/hiring_agents/data_gen/: axes.py  generate.py  sampler.py
src/hiring_agents/eval/: harness.py  labels.py  metrics.py
src/hiring_agents/llm/: client.py  embeddings.py  prompts.py  tracing.py
src/hiring_agents/pipeline/: ingest.py  normalize.py  rerank.py  search.py
src/hiring_agents/ui/: app.py
tests/: conftest.py  test_api.py  test_graph.py  test_ingest_cache.py  test_io_utils.py  test_labels.py  test_metrics.py  test_normalize_jd.py  test_pipeline_smoke.py  test_rerank.py  test_retrieve.py  test_sampler.py  test_schemas.py  test_tracing.py  test_ui.py
