[project]
name = "hiring-agents"
version = "0.0.1"
description = "Synthetic-data PoC for a recruiting retrieve + rerank pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.52.0",
    "pydantic>=2.9.0",
    "numpy>=2.1.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.5",
    "tenacity>=9.0.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "tqdm>=4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langfuse>=2.0",
    "streamlit>=1.40",
    "httpx>=0.27",
    "pyarrow>=14,<20",
]

[project.scripts]
hiring-agents = "hiring_agents.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hiring_agents"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: hits the real OpenAI API; skipped by default",
]
